# repuestos-celular

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Category.jsx  Loading.jsx  NoMatches.jsx  Pricings.jsx  Product.jsx  ProductsList.jsx  Search.jsx
src/utils/: consts.js  helpers.js  store.js
