[package]
name = "repuestos-celular"
version = "1.0.0"
description = "Programa para All in"
authors = ["gixi"]
edition = "2021"


[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
